# ComputerImaging

./: README.md
src/: 0D24BEA8210A01FD.hlsl  1879E31BD3C8A389.hlsl  1A23BE5F554071A0.hlsl  1CC4FA7B85A91A4E.hlsl  1F469A5958514919.hlsl  26B7B842E75DD19E.hlsl  2B2924588FCE1F6A.hlsl  2C1749DCE9315C04.hlsl  2FFB92D8F6B640C6.hlsl  383B2D40DA8BD796.hlsl  44979CDC7D555B01.hlsl  51C704DA2474189E.hlsl  5D098A21BDC546F5.hlsl  660A6D785AE7C962.hlsl  6B782EE7E2FAA162.hlsl  6C7E8C06BC8772F5.hlsl  72F38FCC09DB8111.hlsl  744B2431CADF3E78.hlsl  85396422D16DAB19.hlsl  88EBB0B45EBC74F9.hlsl  923034C8E6C88A18.hlsl  94EC2EFB9A446FD2.hlsl  96F1821A7F783FC4.hlsl  98FC70E3F5455AB6.hlsl  991CD639FDE4C714.hlsl  9E4C1432102C6CD9.hlsl  A195BFDDE3476F0E.hlsl  ACBCCE96008B5E94.hlsl  AD1632BE8C25DC19.hlsl  B120D4C1D5FA1D36.hlsl  (+15 more)
src/DX12/: Async.cpp  AsyncCache.h  CMakeLists.txt  CommandListRing.cpp  ComputeGaussianWeights.hlsl  ComputeHistogram.cpp  ComputeHistogram.h  ComputeHistogram.hlsl  DDSLoader.cpp  DXCHelper.cpp  DXCHelper.h  Device.cpp  Device.h  DxgiFormatHelper.cpp  DynamicBufferRing.cpp  DynamicBufferRing.h  Fence.cpp  FourierTransform.cpp  FourierTransform.h  FourierTransform.hlsl  FreesyncHDR.cpp  FreesyncHDR.h  GPUTimestamps.cpp  GPUTimestamps.h  GaussianBlur.cpp  GaussianBlur.h  GaussianBlur.hlsl  Helper.h  HistogramCreateLUT.hlsl  HistogramEqualize.hlsl  HistogramEqualizer.cpp  HistogramEqualizer.h  HistogramInitInverseLUT.hlsl  HistogramMatch.hlsl  HistogramMatcher.cpp  HistogramMatcher.h  HistogramQuadCount.hlsl  HistogramSumQuads.hlsl  ImageProcessor.cpp  ImageProcessor.h  (+43 more)
(+4 files in other folders)
